@@ -29,6 +29,12 @@ CAMLextern void caml_startup_code(
            char *section_table, asize_t section_table_size,
            char **argv);
 
+CAMLextern value caml_startup_code_exn(
+  code_t code, asize_t code_size,
+  char *data, asize_t data_size,
+  char *section_table, asize_t section_table_size,
+  char **argv);
+
 enum { FILE_NOT_FOUND = -1, BAD_BYTECODE  = -2 };
 
 extern int caml_attempt_open(char **name, struct exec_trailer *trail,
